Fixes for map on smaller devices

--- a/web/static/web/css/mapa.css
+++ b/web/static/web/css/mapa.css
@@ -4,7 +4,6 @@
   display: flex;
   width: 100%;
   height: 100vh;
-  
   top: 0;
   left: 0;
 }
@@ -209,12 +208,9 @@ body {
 }
 
 #map {
-  flex: 1 1 auto;
-  width: 100%;
+  margin-top: 20px;
   height: 100%;
-  min-height: 0;
-  min-width: 0;
-  margin: 0;
+  width: 100%;
   background-color: #F5F5F5;
 }
 
@@ -292,4 +288,38 @@ body {
 }
 .mapa-back-arrow svg {
   display: block;
+}
+
+@media (max-width: 1024px) {
+  .mapa-container {
+    height: 100vh;
+    min-height: 0;
+    min-width: 0;
+    /* position: relative; */
+  }
+  #tituloMapa {
+    height: auto;
+    min-height: 24px;
+    padding: 8px 0;
+    font-size: 22px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    box-shadow: 0px 2px 6px 2px rgba(0, 0, 0, 0.10);
+    margin-bottom: 4px;
+    z-index: 2;
+  }
+  #tituloMapa > p {
+    font-size: 20px;
+    padding: 0.3em 0 0.1em 0;
+  }
+  .mapa-content-area {
+    width: 100vw;
+    height: 100vh;
+    min-height: 0;
+    min-width: 0;
+  }
+  #map {
+    height: 100%;
+    width: 100%; 
+  }
 }
